# rusty-home

./: .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/2020-07-19-164622_create_devices/: up.sql
migrations/2020-07-20-221525_create_actions/: down.sql  up.sql
migrations/2020-09-12-113159_create_scenes/: down.sql  up.sql
src/: main.rs
src/api/: endpoints.rs  errors.rs  mod.rs  routes.rs  schema.rs  sqlite_db.rs
src/api/automations/: endpoints.rs  routes.rs
src/api/devices/: controllers.rs  dao.rs  endpoints.rs  mod.rs  models.rs  routes.rs  view_models.rs
src/api/scenes/: controllers.rs  dao.rs  endpoints.rs  mod.rs  routes.rs  view_models.rs
src/frontend/: mod.rs  routes.rs
src/frontend/devices/: mod.rs  routes.rs  views.rs
src/frontend/scenes/: routes.rs  views.rs
static/js/: action_scripts.js
templates/: action_new.tera  action_template.tera  base.tera  device.tera  device_new.tera  devices.tera  header.tera  scene.tera  scene_append.tera  scene_new.tera  scenes.tera
