[package]
name = "rusty-home"
version = "0.1.0"
authors = ["Antonio Mindov <antonio.mindov@chaosgroup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clokwerk = "0.3.0"
rocket = "0.4.5"
diesel = { version = "1.4.5", features = ["sqlite"] }
dotenv = "0.15.0"
serde = { version = "1.0.114", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_sqlite_pool", "json"]